--- a/app/src/main/res/layout/item_manager_pross_item.xml
+++ b/app/src/main/res/layout/item_manager_pross_item.xml
@@ -52,7 +52,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="9M/S"
+                android:text=""
                 android:textSize="@dimen/text_size11"
                 android:id="@+id/tv_downType" />
 
