--- a/app/src/main/res/layout/item_manager_pross_item.xml
+++ b/app/src/main/res/layout/item_manager_pross_item.xml
@@ -38,7 +38,7 @@
             android:textColor="#333" />
         <LinearLayout
             android:id="@+id/ll_down"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
